--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express-fileupload": "^1.1.5",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.1",
     "morgan": "~1.9.1",
     "serve-favicon": "^2.5.0"
   }
