--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express-fileupload": "^1.1.5",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lunr": "^2.3.6",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.1",
     "morgan": "~1.9.1",
