--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,13 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "elasticsearch": "^16.3.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.1.5",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "lunr": "^2.3.6",
     "mongodb": "^3.2.7",
+    "mongoosastic": "^4.5.0",
     "mongoose": "^5.6.1",
     "morgan": "~1.9.1",
     "serve-favicon": "^2.5.0"
