--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
+    "searchkit": "^2.3.1-alpha.9",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
