--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.1",
     "searchkit": "^2.3.1-alpha.9",
     "typescript": "^3.5.3"
@@ -32,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1"
   }
 }
