--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoosastic": "^4.5.0",
     "mongoose": "^5.6.1",
     "morgan": "~1.9.1",
+    "nodemon": "^1.19.1",
     "serve-favicon": "^2.5.0"
   }
 }
