--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.22.3",
+    "@blueprintjs/icons": "^3.13.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.1",
-    "searchkit": "^2.3.1-alpha.9",
+    "searchkit": "^2.4.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
