--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pranav Maniktala & Aldi Maraya",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "dotenv": "^8.2.0"
   }
 }
